--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -2,6 +2,9 @@
   <PropertyGroup>    
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.9.4" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
